--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     image: jenkins/jenkins:lts
     container_name: jenkins
     ports:
-      - "8080:8080"
-      - "50000:50000"
+      - "8080:8080"    # Interface web
+      - "50000:50000"  # Agent-to-master communication
     volumes:
       - jenkins_home:/var/jenkins_home
     restart: unless-stopped
